<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.memorygame.MainActivity"
    >

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_number"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/tile_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_margin="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round" >

        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
        <Button style="@style/TileButton" />
    </GridLayout>

    <Button
        android:id="@+id/new_game_button"
        style="@style/GameOptionButton"
        android:layout_marginTop="20dp"
        android:text="@string/new_game"
        android:onClick="onNewGameClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tile_grid" />
    <Button
        android:id="@+id/change_color_button"
        style="@style/GameOptionButton"
        android:text="@string/customize"
        android:onClick="onCustomizeClick"
        app:layout_constraintLeft_toLeftOf="@id/new_game_button"
        app:layout_constraintRight_toRightOf="@id/new_game_button"
        app:layout_constraintTop_toBottomOf="@id/new_game_button"/>

    <Button
        android:id="@+id/howTo_button"
        style="@style/GameOptionButton"
        android:text="@string/howTo_button"
        android:onClick="onHowtoPlayClick"
        app:layout_constraintLeft_toLeftOf="@id/new_game_button"
        app:layout_constraintRight_toRightOf="@id/new_game_button"
        app:layout_constraintTop_toBottomOf="@id/new_game_button" />


</androidx.constraintlayout.widget.ConstraintLayout>